2010-08-19 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-icontext.c
	(is_mimetype_of): Take care of wildcard expressions.
	(is_candidate_for_folders): Only try to g_pattern_match() if has pattern.

	* src/plugin-menu/nautilus-actions.c
	(build_nautilus_menus): Add debug messages.

	* data/actions/open-terminal-here.desktop:
	* data/actions/show-na-parameters.desktop: Fix typo.

	* src/api/na-object-item.h:
	* src/core/na-object-item.c
	(na_object_item_deals_with_version): New function.

	* src/api/na-object-profile.h:
	* src/core/na-object-profile.c
	(na_object_profile_convert_v2_to_last): New function.

	* src/core/na-object-action.c:
	* src/core/na-object-menu.c
	(ifactory_object_read_start): Removed (unused) function.

	* src/io-xml/naxml-reader.c (naxml_reader_read_done): Cleanup code.

	* src/nact/nact-ibasenames-tab.c (on_tab_updatable_selection_changed):
	Display matchcase status for the current context.

2010-08-18 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-profile.c (convert_pre_v3_parameters_str):
	As a special optimization, converts '%d/%f' to '%f'.

	* src/io-xml/naxml-reader.c (naxml_reader_read_data):
	Let a node available for a second reading in case of a multiple-defined
	data (e.g. icon which exists in localized and unlocalized forms).

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_new_from_uri):
	Do not warn about malformed .desktop file when importing an URI.

	Path+parameters are splitted whatever be the I/O importer.

	* src/io-desktop/nadp-reader.c (read_done_profile_split_exec): Removed function.

	* src/core/na-object-profile.c (split_path_parameters): New function.

	* src/core/na-data-boxed.c (uint_set_from_string):
	Fix default uint value when reading null string.

	* src/nact/nact-assistant-import.c (assistant_apply): Cleanup code.

2010-08-17 Pierre Wieser <pwieser@trychlos.org>

	* Replace GtkLable with GtkTextView in import and export assistants.
